# MLOpsPyNE

./: .dockerignore  .gitignore  README.md  docker-compose.yaml  jupyter.Dockerfile  mlflow.Dockerfile  pyproject.toml  requirements.txt
data/: README.md
notebooks/: EDA.ipynb  Treinamento e MLOps.ipynb
pipeline/: fetch_data.py  train.py
